# SDLUploader

./: .env.example  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  config.py  image_preprocessing.py  pyproject.toml
src/: config.py  debug_ocr.py  main.py  pdf_to_nparray.py
src/file_splitter/: os_utils.py  pdf_instance.py
src/file_splitter/text_parser/: rules.py  rules_engine.py
src/ocr_engine/: preprocessing_utils.py  tesseract_engine.py
tests/unit_tests/: test_pdf_instance.py  test_sdl_rules.py
