[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[project]
name = "SDLUploader"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "deskew>=1.6.1",
    "dotenv>=0.9.9",
    "numpy>=2.5.0",
    "opencv-python>=5.0.0.93",
    "pillow>=12.2.0",
    "pymupdf>=1.28.0",
    "tesserocr",
    "tqdm>=4.68.3",
]

[tool.pyright.overrides]
module = "tesserocr"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.uv.sources]
tesserocr = { url = "https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp313-cp313-win_amd64.whl" }
